--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,10 +1,10 @@
 #
-# Copyright 2016 Alexander Orlov <alexander.orlov@loxal.net>. All rights reserved.
+# Copyright 2017 Alexander Orlov <alexander.orlov@loxal.net>. All rights reserved.
 #
 
-#Wed Oct 05 19:48:11 CEST 2016
+#Sun Jan 08 17:57:26 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.2-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
