--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,6 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.6'
-    compile 'org.hibernate:hibernate-validator:5.3.4.Final'
+    compile 'org.hibernate:hibernate-validator:5.4.0.CR1'
     testCompile 'junit:junit:4.12'
 }
