--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -2,9 +2,9 @@
 # Copyright 2017 Alexander Orlov <alexander.orlov@loxal.net>. All rights reserved.
 #
 
-#Sun Jan 08 17:57:26 CET 2017
+#Mon Feb 27 22:35:28 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.4-bin.zip
