--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,3 +64,7 @@ dependencies {
     compile 'org.hibernate:hibernate-validator:5.4.0.Final'
     testCompile 'junit:junit:4.12'
 }
+
+//tasks.withType(JavaCompile) {
+//    options.incremental = true // one flag, and things will get MUCH faster
+//}
