--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -2,9 +2,9 @@
 # Copyright 2017 Alexander Orlov <alexander.orlov@loxal.net>. All rights reserved.
 #
 
-#Mon Feb 27 22:35:28 CET 2017
+#Thu Mar 02 08:13:44 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.4-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.4-all.zip
