--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 
     compile 'com.android.support:design:25.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.7'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr2'
     compile 'org.hibernate:hibernate-validator:5.4.0.Final'
     testCompile 'junit:junit:4.12'
 }
