--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -2,9 +2,9 @@
 # Copyright 2017 Alexander Orlov <alexander.orlov@loxal.net>. All rights reserved.
 #
 
-#Wed Mar 22 20:14:03 CET 2017
+#Sat May 13 22:05:13 CEST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.4.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.5-all.zip
